--- a/app/styles/_leaderboard.scss
+++ b/app/styles/_leaderboard.scss
@@ -1,7 +1,8 @@
 .recent-results {
   width: 90%;
   background: rgba(222,16,16,0.75);
-  margin: 2.5em 5%;
+  margin: auto;
+  margin-bottom: 1.5em;
   border-radius: 10px;
 
   h3 {
@@ -15,6 +16,7 @@
     padding-left: 0;
     padding-bottom: .5em;
     list-style-type: none;
+    margin-bottom: 0;
 
     li {
       @extend .clearfix;
